# source_cmd_parser

./: Cargo.toml  README.md  SETUP.md
examples/chatgpt/: Cargo.toml
examples/chatgpt/src/: main.rs
examples/math-eval/: AGENTS.md  Cargo.toml
examples/math-eval/src/: main.rs
examples/math-eval/src/commands/: eval.rs  mod.rs
examples/math-eval/src/state/: cooldowns.rs  mod.rs  model.rs
src/: builder.rs  error.rs  keyboard.rs  lib.rs  log_parser.rs  model.rs  parsers.rs
