[package]
name = "source_cmd_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.73"

chrono = "0.4.31"
clipboard-win = "5.0.0"
enigo = "0.1.3"
futures = "0.3.28"
log = "0.4.20"
notify = "6.1.1"
num_cpus = "1.16.0"
rayon = "1.8.0"
regex = "1.10.0"
thiserror = "1.0.49"
tokio = { version = "1.33.0", features = ["full"] }
