[package]
name = "chatgpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
source_cmd_parser = {path = "../../"}
chatgpt_rs = "1.2.3"
pretty_env_logger = "0.5.0"
tokio = "1.33.0"
lazy_static = "1.4.0"
log = "0.4.20"
